This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

24-Oct-2001 (Lars Duening)  (3.3.119)
    - (efuns.c) If a closure is used with regreplace(), it will be
        passed the position of the found substring, too (suggested
        by Alfe).
    - (comm.c) New efun remove_input_to() (part of f-000530).

23-Oct-2001 (Lars Duening)
    - (doc/efun/terminal_colour) Improved the explanation of the key
        recognition strategy, and added a MudOS simulation function
        courtesy of Fiona.

22-Oct-2001 (Lars Duening)
    - (md5.c) Changed two function calls from the generic to the MD5
        versions (thanks, Gawain!)

21-Oct-2001 (Lars Duening)  (3.3.118)
    - (actions.c) Removed a crasher when add_action() was performed between
        two objects with no environment (thanks, Fuchur!).

18-Oct-2001 (Lars Duening)  (3.3.117)
    - (doc/LPC/arrays, doc/efun/sprintf) Improved examples by
        Coogan (thanks!).
    - (sprintf.c) Removed a crasher in justified formatting when the string
        to format contained only one word (reported by Slava and Coogan).

17-Oct-2001 (Lars Duening)  (3.3.116)
   - (interpret.c) I had to deactivate the tests against assignments
        to negative ranges - this feature is in fact in use (thanks,
        Coogan and Alfe - and sorry for breaking TubMud!).

15-Oct-2001 (Lars Duening)  (3.3.115)
    - (interpret.c) Another error in call_other() on arrays of objects.
        (reported by Dafire)
    - (call_out.c) The minimum delay can now be 0 (suggested by Tomba).

14-Oct-2001 (Lars Duening)  (3.3.114)
    - (efuns.c) Removed a free-memory access in efun strstr() (thanks,
        Tomba!)
    - (Makefiles) Updated my MkDepend tool, so that it no longer adds
        non-existing include files to the dependencies.
    - (interpret.c) Oops, call_other()/call_direct() on array of objects