@@ -141,6 +141,7 @@ Lars Duening thanks:
      Brandon Mathis (brandon.mathis@medsolutions.com)
      Bruce Mitchell (mitchell@manly.delconet.com, Klahn@Manly Mud)
      Carlo von Loesch (cvl@symlynX.com, lynx@high.impact.pages.de)
+     Carsten Pluntke (su0289@studserver.uni-dortmund.de, Vejar@ForgottenDreams)
      Casey Zacek (cz@8000hosting.com, zippo@eotl)
      Christian "Leonidas" Becker (cbecker@informatik.hu-berlin.de)
      Christian Kirschbaum (chrissy@cs.tu-berlin.de, Chameloid@Tubmud)
@@ -170,7 +171,8 @@ Lars Duening thanks:
      Heiko Kopp (hkopp@informatik.uni-rostock.de, bardioc@bardioc.com,
        Bardioc@Evermore)
      Henk Stokhorst (Tha@wxs.nl)
-     Holger Kremss (jur94ewp@studserv.uni-leipzig.de, Holger@Wunderland)
+     Holger Kremss (jur94ewp@studserv.uni-leipzig.de, Holger@web.de,
+       Holger@Wunderland)
      Joern Rennecke (amylaar@cygnus.co.uk)
      Jose Manuel Roman (roman@wol.es, Theuzifan uzi@simauria.upv.es)
      Juergen Weickert (Sissi@UNItopia)
