@@ -20,15 +20,15 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 119)
-(Parent-Version lpmud 3-3 118)
-(Version-Log "Small correction to md5.c
-Improved doc/efun/terminal_colour.
-The regreplace() closure also receives the position of the substring.
-New efun remove_input_to().")
+(Project-Version lpmud 3-3 120)
+(Parent-Version lpmud 3-3 119)
+(Version-Log "The lexer in make_func can now handle DOS-style lineends.
+Corrected the computation of num_dirty_mappings.
+Added some additional debug information on the 'first ref to' sanity checks
+in the GC.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 24 Oct 2001 20:08:18 -0600")
+(Checkin-Time "Mon, 12 Nov 2001 19:51:15 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -60,8 +60,8 @@ New efun remove_input_to().")
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.4 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.29 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.182 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.30 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.183 644))
   (HISTORY (lpmud/f/49_HISTORY 1.214 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -136,7 +136,7 @@ New efun remove_input_to().")
   (src/files.c (lpmud/I/50_files.c 1.11 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.3 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.33 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.34 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.12 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
@@ -148,7 +148,7 @@ New efun remove_input_to().")
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.6 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.39 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.9 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.29 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.30 644))
   (src/md5.h (lpmud/L/18_md5.h 1.2 644))
   (src/md5.c (lpmud/L/19_md5.c 1.5 644))
   (src/mempools.h (lpmud/D/48_mempools.h 1.2.1.3 644))
@@ -188,7 +188,7 @@ New efun remove_input_to().")
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.19 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.50 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.7 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.34 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.35 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.2 644))
   (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.28 644))
   (src/strfuns.h (lpmud/B/51_strfuns.h 1.11.1.4 644))
@@ -202,14 +202,14 @@ New efun remove_input_to().")
   (src/typedefs.h (lpmud/D/50_typedefs.h 1.12 644))
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.11 644))
-  (src/xalloc.h (lpmud/G/51_xalloc.h 1.12 644))
-  (src/xalloc.c (lpmud/H/0_xalloc.c 1.2.1.3 644))
+  (src/xalloc.h (lpmud/G/51_xalloc.h 1.13 644))
+  (src/xalloc.c (lpmud/H/0_xalloc.c 1.2.1.4 644))
 
   ;; Build files
   (src/func_spec (lpmud/c/31_func_spec 1.53.1.42 644))
   (src/string_spec (lpmud/F/6_string_spe 1.14 644))
   (src/mkfunc.c (lpmud/L/14_mkfunc.c 1.1 644))
-  (src/make_func.y (lpmud/b/7_make_func. 1.25.1.19 644))
+  (src/make_func.y (lpmud/b/7_make_func. 1.25.1.20 644))
 
   ;; Generic host files
   (src/hosts/README (lpmud/h/10_README 1.2 644))
